<resources>
        <string name="zero_0">0</string>
        <string name="app_name">T_T</string>
        <string name="ok">OK</string>
        <string name="cancel">Cancel</string>
        <string name="regist_note">Already have an account?</string>
        <string name="regist_button_regit">Register</string>
        <string name="login_note">Don\'t have an account?</string>
        <string name="login_regist_now">Register now!</string>
        <string name="regist_hint">Enter your unique Game.com ID.</string>
        <string name="login_button_login">Log in</string>
        <string name="login_regist_hint_name">Username</string>
        <string name="login_regist_hint_pwd">Password</string>
        <string name="login_regist_sign_with">Log in</string>
        <string name="login_wechat">WeChat</string>
        <string name="login_facebook">Facebook</string>
        <string name="login_weibo">WeiBo</string>
        <string name="login_qq">QQ</string>
        <string name="login_error_empty_name">Username is required.</string>
        <string name="login_error_empty_pwd">Password is required.</string>
        <string name="regist_error_empty_email">Email is required.</string>
        <string name="regist_error_invalid_email">Please enter a valid email address.</string>
        <string name="login_error_invalid_pwd">Password must be 6-18 letters and numbers.</string>
        <string name="regist_agreement_link_1">By tapping Register you agree to the User Agreement.</string>
        <string name="regist_agreement_link_2">User Agreement</string>
        <string name="trade_record">Transaction History</string>
        <string name="user_purse">User Wallet</string>
        <string name="account_information">Account Information</string>
        <string name="setting">Settings</string>
        <string name="push_notification">Push Notifications</string>
        <string name="msg_notification">Receive new message notifications</string>
        <string name="about">About</string>
        <string name="background_photos">Background Picture</string>
        <string name="name">Nickname</string>
        <string name="introduce">About</string>
        <string name="password">Password</string>
        <string name="logout">Log out</string>
        <string name="hint">Hint</string>
        <string name="username_cannot_empty">Username cannot be empty.</string>
        <string name="report_success">Feedback submitted successfully.</string>
        <string name="click_to_login">Tap to log in</string>
        <string name="save">Save</string>
        <string name="camera">Camera</string>
        <string name="album">Gallery</string>
        <string name="search_page_title">Search</string>
        <string name="search_hint">Enter search terms</string>
        <string name="order_list_order_record_empty">You don\'t have any transaction records.</string>
        <string name="media_not_found">Media not found.</string>
        <string name="confirm">OK</string>
        <string name="close">Close</string>
        <string name="confirm_logout">Are you sure you want to log out?</string>
        <string name="follow">Follow</string>
        <string name="following">Following</string>
        <string name="followers">Followers</string>
        <string name="wechat_session">WeChat</string>
        <string name="wechat_timeline">Moments</string>
        <string name="facebook_share">Facebook</string>
        <string name="weibo">WeiBo</string>
        <string name="password_is_changed">Password successfully changed.</string>
        <string name="password_update">Change password</string>
        <string name="please_enter_old_password">Enter current password</string>
        <string name="password_not_match">Password\'s don\'t match</string>
        <string name="your_user_info_was_expired">Your user information has expired.</string>
        <string name="no_internet">Unable to connect to network, check your connection.</string>
        <string name="subscribed">Subscribe</string>
        <string name="free">Free</string>
        <string name="search_results">Search results</string>
        <string name="no_search_results">No results</string>
        <string name="share">Share</string>
        <string name="video_loading_fail_to_retry">Video failed to load, please try again.</string>
        <string name="confirm_password_hint">Confirm new password</string>
        <string name="new_password_hint">Enter new password</string>
        <string name="old_password_hint">Enter current password</string>
        <string name="delete">Delete</string>
        <string name="start">Start</string>
        <string name="language">Language</string>
        <string name="system">System</string>
        <string name="you_do_not_have_any_message_to_find_more_exciting">You don\'t have any messages yet, go find something interesting!</string>
        <string name="permission_error_unable_to_use_feature">You don\'t have the permissions to use these features, please grant the necessary permissions in your device settings.</string>
        <string name="upload_failed_hint">Upload failed, please try again.</string>
        <string name="recharge">Recharge</string>
        <string name="goto_recharge">Recharge Now</string>
        <string name="send">Send</string>
        <string name="balance_not_enough">Balance is too low, please recharge.</string>
        <string name="login_foget_pwd">Forgot password?</string>
        <string name="login_find_pwd_title">Recover password</string>
        <string name="find_pwd_id_input">Enter your Fame ID</string>
        <string name="find_pwd_id_empty">Fame ID cannot be empty.</string>
        <string name="find_pwd_phonenum_empty">Phone number cannot be empty.</string>
        <string name="find_pwd_email_empty">Email cannot be empty.</string>
        <string name="find_pwd_next">Next</string>
        <string name="find_pwd_by_phone">Recover password via linked phone number.</string>
        <string name="find_pwd_by_email">Recover password via link email.</string>
        <string name="find_pwd_verify_code_input">Enter verification code</string>
        <string name="input_phone_num">Enter phone number</string>
        <string name="input_email">Enter email</string>
        <string name="resend_verify_code_interval">Can send again in %1$s sec</string>
        <string name="get_verify_code">Send verification code</string>
        <string name="bind_pwd_error_phone_tip">Invalid phone number, please try again.</string>
        <string name="account_security">Account Security</string>
        <string name="bind_phone_title">Link phone</string>
        <string name="bind_phone_title_update">Change linked phone</string>
        <string name="account_security_bind_email">Link email</string>
        <string name="account_security_no_bind">Not linked</string>
        <string name="select_recharge_value">Select the amount you\'d like to recharge</string>
        <string name="custom_amount">Custom amount</string>
        <string name="payment_method">Payment method</string>
        <string name="current_balance">Current balance</string>
        <string name="find_pwd_input_new_pwd">Enter new password</string>
        <string name="find_pwd_bind_tip_phone">Tap to send verification code. Your linked phone %1$s will receive a verification code.</string>
        <string name="find_pwd_bind_tip_email">Tap to send verification code. Your linked email %1$s will receive a verification code.</string>
        <string name="find_pwd_success">Password changed successfully, please log in again.</string>
        <string name="find_pwd_re_log_in">Log in again</string>
        <string name="find_pwd_fail_no_bind">You don\'t have a linked phone or email, unable to recover your password.</string>
        <string name="bind_success">Link successful</string>
        <string name="bind_fail">Link failed</string>
        <string name="reset_success">Change successful</string>
        <string name="reset_fail">Change failed</string>
        <string name="bind_pwd_tips">* Link your phone or email to be able to recover your password.</string>
        <string name="finish">Finish</string>
        <string name="back">Back</string>
        <string name="rebind_phone">Change phone number</string>
        <string name="rebind_email">Change email</string>
        <string name="unfollow">Unfollow</string>
        <string name="next">Next</string>
        <string name="action_sign_in_short">Sign in</string>
        <string name="upload_avatar">Tap to upload a profile pic</string>
        <string name="nickname">Nickname</string>
        <string name="nickname_hint">Enter 6-8 letters or numbers</string>
        <string name="skip">Skip</string>
        <string name="record_state_normal">Hold to talk</string>
        <string name="record_state_recording">Swipe up to cancel</string>
        <string name="record_state_cancel">Cancel</string>
        <string name="image_content_desc">[Image]</string>
        <string name="audio_content_desc">[Audio]</string>
        <string name="video_content_desc">[Video]</string>
        <string name="empty_emoji_content_desc">[Hello]</string>
        <string name="edit_profile_info">Edit profile</string>
        <string name="logo_title">GAME.COM</string>
        <string name="login_name_hint">Enter your Game ID</string>
        <string name="login_password_hint">Enter password</string>
        <string name="have_no_account">Don\'t have an account?</string>
        <string name="to_regist">Register Now</string>
        <string name="quick_login">Express Login</string>
        <string name="to_login">Log in now</string>
        <string name="select_color_tip">Select your favorite color</string>
        <string name="not_upload_image">You haven\'t uploaded a profile photo</string>
        <string name="not_set_fullname">You haven\'t set a nickname</string>
        <string name="edit">Edit</string>
        <string name="game_level">Game Level</string>
        <string name="profile">Profile</string>
        <string name="retry">Retry</string>
        <string name="long_account_info">Female, 19, Beijing, Chaoyang District</string>
        <string name="avatar">Profile Photo</string>
        <string name="lucky_color">Lucky Color</string>
        <string name="search">Search</string>
        <string name="search_id">Search ID</string>
        <string name="gender_boy">Male</string>
        <string name="gender_girl">Female</string>
        <string name="gender_unkown">Unknown</string>
        <string name="gender">Gender</string>
        <string name="birthday">Birthday</string>
        <string name="area">Location</string>
        <string name="current_location">Current location</string>
        <string name="contacts">Contacts</string>
        <string name="game">Games</string>
        <string name="user">Users</string>
        <string name="tribe">Clans</string>
        <string name="no_birthday_select">You haven\'t selected your birthday</string>
        <string name="no_color_select">You haven\'t selected a color</string>
        <string name="no_city_select">You haven\'t selected a city</string>
        <string name="no_nickname_select">Nickname is required</string>
        <string name="no_avatar_select">Profile photo is required</string>
        <string name="edit_fullname">Edit nickname</string>
        <string name="age_unit">Age</string>
        <string name="chat">Chat</string>
        <string name="game_clan">Game Clan</string>
        <string name="game_forum">Game Forum</string>
        <string name="game_platform">Game Platform</string>
        <string name="screen">Block</string>
        <string name="chat_action_copy">Copy</string>
        <string name="chat_action_delete">Delete</string>
        <string name="chat_action_forword">Forward</string>
        <string name="chat_action_withdraw">Retract</string>
        <string name="clan_notice">Announcements</string>
</resources>