<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="30dp"
              android:background="@drawable/black_btn_nor"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/item_action_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView

            android:layout_width="40dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/chat_action_copy"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_action_forword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/chat_action_forword"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_action_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:id="@+id/item_action_withdraw"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/chat_action_withdraw"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/item_action_delete"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/chat_action_delete"
        android:textColor="@color/white"
        android:textSize="12sp"/>


</LinearLayout>
